# rig-chat-history

./: Cargo.toml  README.md
database/: chat  chat1  chat2  chat_duplicate
src/: lib.rs
