[package]
name = "rig-chat-history"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
log = "0.4.33"
nanoid = "0.5.0"
redb = "4.1.0"
rig-core = "0.39.0"
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread"] }
serde_json = "1.0.150"
bson = { version = "3.1.0", features = ["serde"] }
